# nicepdf

./: .components.yaml  .gitignore  .project  README.md  pyproject.toml
.github/workflows/: build.yml
nicepdf/: nicepdf_cmd.py  pdftool.py  version.py  webserver.py
pdftool/: pdf_unbooklet.py  pdftool_cmd.py  version.py  webserver.py
scripts/: blackisort
tests/: basetest.py  test_booklet_numbers.py  test_rotate.py  test_unbooklet.py  test_version.py
