[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdftool"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
    "PyPDF2>=1.26.0",
    "tqdm>=4.60.0",
    "reportlab>=3.5.67"
]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version", "description"]

[tool.hatch.version]
path = "pdftool/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/pdftool"
Documentation = "https://wiki.bitplan.com/index.php/pdftool"
Source = "https://github.com/WolfgangFahl/pdftool"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["pdftool"]

[tool.hatch.build.targets.wheel.sources]
"pdftool" = "pdftool"

[project.scripts]
pdftool = "pdftool.pdftool_cmd:main"

