[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicepdf"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
    "PyPDF>=3.16.0",
    "tqdm>=4.60.0",
    "reportlab>=3.5.67",
    "nicegui",
    "ngwidgets>=0.0.20"
]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version", "description"]

[tool.hatch.version]
path = "nicepdf/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/nicepdf"
Documentation = "https://wiki.bitplan.com/index.php/nicepdf"
Source = "https://github.com/WolfgangFahl/nicepdf"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["nicepdf","nicepdf_examples"]

[tool.hatch.build.targets.wheel.sources]
"nicepdf" = "nicepdf"
"nicespdf_examples" = "nicepdf_examples"

[project.scripts]
nicepdf = "nicepdf.nicepdf_cmd:main"

